[package]
name = "sdo"
version = "0.3.2"
edition = "2021"
description = "An unofficial implementation of Iress' SDO format."
repository = "https://github.com/fourbytes/sdo_rs"
license = "MIT"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.0.0-rc"
byteorder = "1.4.3"
integer-encoding = "3.0.4"
itertools = "0.10.5"
miette = "5.4.1"
rand = "0.8.5"
thiserror = "1.0.37"
time = { version = "0.3", features = ["macros"] }
tracing = "0.1.37"
